add visualz wear

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,41 +4,39 @@
 
             <img src="../../assets/images/icon.ico" class="ico" />
 
-
         </div>
         <div class="release-notes">
             <h1>VISUALZ is</h1>
+
+            <p>
+                Part of the VISUALZ audio reactive family.
+            </p>
+
             <p>
                 Passionate about technology, visual arts, music &amp; artists.
-                The Visualz home base is Chicago.
+                VISUALZ is based in Chicago.
             </p>
 
             <p>
-                VISUALZ founders combined these passions into a platform of tools for artists to create
-                realtime, audio reactive visuals using web technologies such as WebGL, Web Audio, WebRTC, and custom
-                shaders for live events, concert visuals, streams, interactive installations, &amp; experiences.
+                Our founders combined these passions into the audio reactive software platform, VISUALZ. Designed for
+                live streams, events, and installations. Built using web technologies such as WebGL, Web Audio, WebRTC,
+                and custom shaders.
             </p>
 
             <p>
-                We build software, real-time audio-reactive music visualization tools, live concert
-                visuals, and interactive installations.
+                …and now <a href="" target="_blank">VISUALZ WEAR</a>, a line of high-end wearable audio reactive LED
+                jewelry.
             </p>
 
             <p>
-                When not building the Visualz software and toolset
-                we're doing events, booking vjs/djs, producing music, and more.
-                Contact visualzapp.contact@gmail.com to collab or hire us.
+                When not building software or wearables. We're doing events, installations, streams, and more. Contact
+                contact@visualzstudio.com to collab or hire us.
             </p>
 
             <h2>Reach Out</h2>
             <p>
-                We love hearing from people. That's how we get new ideas, make new frieds, and collaborate. Contact <a
-                    href="mailto:visualzapp.contact@gmail.com">visualzapp.contact@gmail.com</a>.
-            </p>
-
-            <h2>Press, Sponsors, Investors Contact</h2>
-            <p>
-                <a href="mailto:visualzapp.contact@gmail.com">Visualzapp.contact@gmail.com</a> for more info.
+                We love hearing from people. That's how we get new ideas, make new friends, and collaborate. Contact <a
+                    href="mailto:contact@visualzstudio.com">contact@visualzstudio.com</a>.
             </p>
 
 
