--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -19,7 +19,7 @@
             Once live events are possible again we'd love to do live and remote visuals for those as well.
         </p>
         <p class="center">
-            Visualzapp.contact@gmail.com to setup a demo or just talk about your visual needs as an artist.
+            contact@visualzstudio.com to setup a demo or just talk about your visual needs as an artist.
         </p>
     </div>
 </div>
