--- a/src/app/live-stream/live-stream.component.scss
+++ b/src/app/live-stream/live-stream.component.scss
@@ -276,7 +276,7 @@ mat-toolbar-row {
     margin: 5px 5px 0 0;
     cursor: pointer;
 
-    color: #ff4081;
+    color: #e91e63;
 
     &.white {
         color: #fff;
