--- a/src/app/success/success.component.html
+++ b/src/app/success/success.component.html
@@ -2,7 +2,7 @@
     <h1 class="center">SUCCESS</h1>
     <h2>Thank You</h2>
     <p>
-        Enter your email into visualz to authenticate your license and unlock your features.
+        Enter your email into the VISUALZ desktop application to authenticate your license and unlock your features.
     </p>
 
     <button routerLink="/download" class="pink" mat-raised-button>
