--- a/src/app/visualz/visualz.component.html
+++ b/src/app/visualz/visualz.component.html
@@ -84,6 +84,13 @@
                     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
 
+                <!-- 12/9/20 -->
+                <h2>System/Website Update</h2>
+                <ul class='new'>
+                    <li>Announcing <a href="https://wear.visualzstudio.com" class="pink">VISUALZ WEAR</a>.</li>
+                    <li>Login, acount, and subscription management enabled on www.visualzstudio.com</li>
+                </ul>
+
                 <!-- 8/28/20 -->
                 <h2>Update 2.1.6</h2>
                 <ul class='new'>
@@ -97,48 +104,50 @@
                         and livestreaming functionality.</li>
                 </ul>
 
-                <!-- 7/17/20 -->
-                <h2>Update 2.1.4</h2>
-                <ul class='new'>
-                    <li>Upgraded TURN (ICE) servers with relay and global availability for better streaming to the
-                        browser, better integrating with OBS and livestreaming functionality.</li>
-                </ul>
+                <!-- <button>Full History</button>
+                <button>Older Versions</button> -->
 
-                <ul class='new'>
-                    <li>OBS + Zoom Livestream Integration</li>
-                    <li>Muptiple external windows/diplays.</li>
-                    <li>Music Video Making.</li>
-                    <li>Stream to browser.</li>
-                    <li>Mobile device controller.</li>
-                    <li>Control your audiences phone screen and flashlight.</li>
-                    <li>Stream the visuals to audiences phones.</li>
-                    <li>Updated smartphone remote control.</li>
-                    <li>The audience can send selfies to the composition.</li>
-                    <li>Added visual effects.</li>
-                    <li>Updated camera features. Now with streaming mobile video support.</li>
-                    <li>Updates to remote control.</li>
-                    <li>Gif &amp; image search.</li>
-                    <li>CC video library.</li>
-                    <li>3d audio reactive visualizations.</li>
-                    <li>Optimized beat detection.</li>
-                    <li>Hotkeys.</li>
-                    <li>Improved UI/UX.</li>
-                    <li>Add music to tracks.</li>
-                    <li>Optionally store media in the cloud.</li>
-                    <li>Output resolution specification.</li>
-                    <li>With permission collect connected audience mobile phone numbers.</li>
-                    <li>Undo.</li>
-                    <li>Much, much, more.</li>
-                </ul>
-                <div class="smaller">
+                <!-- 7/17/20
+                    <h2>Update 2.1.4</h2>
+                    <ul class='new'>
+                        <li>Upgraded TURN (ICE) servers with relay and global availability for better streaming to the
+                            browser, better integrating with OBS and livestreaming functionality.</li>
+                    </ul>
 
-                    <!-- 5/20/20 -->
+                    <ul class='new'>
+                        <li>OBS + Zoom Livestream Integration</li>
+                        <li>Muptiple external windows/diplays.</li>
+                        <li>Music Video Making.</li>
+                        <li>Stream to browser.</li>
+                        <li>Mobile device controller.</li>
+                        <li>Control your audiences phone screen and flashlight.</li>
+                        <li>Stream the visuals to audiences phones.</li>
+                        <li>Updated smartphone remote control.</li>
+                        <li>The audience can send selfies to the composition.</li>
+                        <li>Added visual effects.</li>
+                        <li>Updated camera features. Now with streaming mobile video support.</li>
+                        <li>Updates to remote control.</li>
+                        <li>Gif &amp; image search.</li>
+                        <li>CC video library.</li>
+                        <li>3d audio reactive visualizations.</li>
+                        <li>Optimized beat detection.</li>
+                        <li>Hotkeys.</li>
+                        <li>Improved UI/UX.</li>
+                        <li>Add music to tracks.</li>
+                        <li>Optionally store media in the cloud.</li>
+                        <li>Output resolution specification.</li>
+                        <li>With permission collect connected audience mobile phone numbers.</li>
+                        <li>Undo.</li>
+                        <li>Much, much, more.</li>
+                    </ul>
+                
+                    5/20/20 
                     <h2>Update 2.1.3</h2>
                     <ul class='new'>
                         <li>Bugfixes baby!</li>
                     </ul>
 
-                    <!-- 5/20/20 -->
+                    5/20/20
                     <h2>Update 2.1.2</h2>
                     <ul class='new'>
                         <li>Livestream enhancements.</li>
@@ -151,13 +160,13 @@
                         <li>Text maximum size increased.</li>
                     </ul>
 
-                    <!-- 5/9/20 -->
+                    5/9/20
                     <h2>Update 2.1.1</h2>
                     <ul class='new'>
                         <li>General updates.</li>
                     </ul>
 
-                    <!-- 5/7/20 -->
+                    5/7/20
                     <h2>Update 2.1.0</h2>
                     <ul class='new'>
                         <li>Update to image overlay/mask fx.</li>
@@ -168,7 +177,6 @@
                         <li>Added auto updates. So no more re-installing.</li>
                     </ul>
 
-                    <!-- -->
                     <h2>Update 2.0.7</h2>
                     <ul class='new'>
                         <li>Major updates to FanCam mobile UI/UX.</li>
@@ -183,7 +191,7 @@
                         <li>Bugfix to remote control QR.</li>
                     </ul>
 
-                    <!-- 4/21/20 -->
+                    4/21/20
                     <h2>Update 2.0.6</h2>
                     <ul class='new'>
                         <li>Added Glitch Effect.</li>
@@ -193,9 +201,9 @@
                         <li>Bugfix to playback stopping when moving scenes sometimes.</li>
                         <li>Bugfix to media file open issue.</li>
                         <li>Bugfix to fx issue after moving scene to another track.</li>
-                    </ul>
+                    </ul> -->
 
-                    <!-- 
+                <!-- 
                     <h2>Update 2.0.5</h2>
                     <ul class='new'>
                         <li>Performace Improvement.</li>
@@ -203,14 +211,14 @@
                     </ul> 
                     -->
 
-                    <!-- 4/20/20
+                <!-- 4/20/20
                     <h2>Update 2.0.4</h2>
                     <ul class='new'>
                         <li>Stream to browser enabled for free use. Allows for remote OBS/Zoom integration.</li>
                     </ul>
                     -->
 
-                    <!-- 4/15/20
+                <!-- 4/15/20
                     <h2>Update 2.0.3</h2>
                     <ul class='new'>
                         <li>Issue on computers with high resolutions.</li>
@@ -218,20 +226,19 @@
                     </ul>
                     -->
 
-                    <!-- 4/14/20
+                <!-- 4/14/20
                     <h2>Update 2.0.2</h2>
                     <ul class='new'>
                         <li>Video library loading issue.</li>
                     </ul>
                     -->
 
-                    <!-- 4/13/20
+                <!-- 4/13/20
                     <h2>Update 2.0.1</h2>
                     <ul class='new'>
                         <li>Mac Version Available.</li>
                     </ul>
                     -->
-                </div>
             </div>
         </div>
     </div>
