--- a/src/app/market-place-success/market-place-success.component.html
+++ b/src/app/market-place-success/market-place-success.component.html
@@ -5,7 +5,7 @@
 
     <div class="content-inner-wrapper">
 
-        <div *ngIf="cartCopy.products.length">
+        <!-- <div *ngIf="cartCopy.products.length">
 
             <table class="two-third">
                 <tr>
@@ -45,6 +45,6 @@
                     account page.
                 </p>
             </div>
-        </div>
+        </div> -->
     </div>
 </div>
