--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,6 +90,10 @@ p {
     color: #fff;
 }
 
+.pink-text {
+    color: #e91e63 !important;
+}
+
 .invert {
     max-width: 1000px;
     display: flex;
