--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,7 @@ gridster .gridster-row, gridster .gridster-column {
 gridster {
     background: #333 !important;
     box-shadow: inset 0px 0px 5px -1px #000000 !important;
+    min-height: 200px;
 }
 
 .dark-snackbar {
