--- a/src/app/fan-screen/fan-screen.component.html
+++ b/src/app/fan-screen/fan-screen.component.html
@@ -1,8 +1,10 @@
 <div class="main-wrapper">
     <div class="crowd-preview" [ngStyle]="{'background-color':crowdScreenBackgroundColor}">
 
-        <div class="torch-overlay"
-            [ngStyle]="{'background-color':crowdScreenBackgroundColor, 'display':crowdScreenTorchDisplay && torch}">
+        <div class="blackout-overlay" [ngStyle]="{'background-color':blackoutColor, 'display':crowdScreenBlackout}">
+        </div>
+
+        <div class="torch-overlay" [ngStyle]="{'background-color':crowdScreenBackgroundColor, 'display':crowdScreenTorchDisplay && torch}">
         </div>
 
         <img class="qr" src="{{this.qr}}" />
@@ -37,10 +39,10 @@
             <mat-icon>camera</mat-icon>
         </button>
 
-        <button mat-mini-fab color="primary" class="flip-cam" *ngIf="!takingPic && cameraPerm && camera"
+        <!-- <button mat-mini-fab color="primary" class="flip-cam" *ngIf="!takingPic && cameraPerm && camera"
             (click)="flipCam($event)">
             <mat-icon>flip_camera_ios</mat-icon>
-        </button>
+        </button> -->
 
         <video width="1" height="1" class="playing-video" id="heartbeat" loop autoplay muted playsinline>
             <source src="https://muvievideos.s3.us-east-2.amazonaws.com/SampleVideo_1280x720_2mb.mp4_1.mp4"
@@ -54,14 +56,13 @@
         <div style='margin:20px;'>
             Mobile: {{mobile}}
         </div>
-
         <div style='margin:20px;'>
             Facing Mode: {{facingMode}}
         </div>
-
         <div style='margin:20px;'>
             User-Agent: {{userAgent}}
-        </div> -->
+        </div> 
+        -->
 
         <script>
             setInterval(() => {
