--- a/src/app/fan-screen/fan-screen.component.scss
+++ b/src/app/fan-screen/fan-screen.component.scss
@@ -6,6 +6,10 @@
     color: #fff;
 }
 
+.main-wrapper {
+    background-color: #000;
+}
+
 @media screen and (min-width: 100px) and (max-width: 767px) and (orientation: landscape) {
   html {
     transform: rotate(-90deg);
@@ -65,6 +69,17 @@
     left: 0px;
     pointer-events:none;
     opacity: 0.4;
+}
+
+.blackout-overlay {
+    position: absolute;
+    z-index: 7;
+    height: 100vh;
+    width: 100vw;
+    top: 0px;
+    left: 0px;
+    pointer-events:none;
+    opacity: 1.0;
 }
 
 canvas {
@@ -133,10 +148,10 @@ canvas {
 .qr {
     position: absolute;
     z-index: 3;
-    top: 0px;
-    left: 0px;
-    width: 50vw;
-    height: 50vw;
+    top: 10px;
+    left: 10px;
+    width: 40vw;
+    height: 40vw;
 }
 
 .grant-perms {
@@ -158,6 +173,7 @@ canvas {
     color: #333;
     font-size: 40px;
     border: 0px;
+    outline: 0px;
 
     &.wait {
         z-index: 6;
