--- a/src/app/remote-cam/remote-cam.component.html
+++ b/src/app/remote-cam/remote-cam.component.html
@@ -27,10 +27,10 @@
         <mat-icon>airplay</mat-icon>
     </button>-->
 
-    <!-- Flip Camera -->
+    <!-- Flip Camera
     <button mat-mini-fab color="primary" class="flip-cam" (click)="flipCam($event)" *ngIf="mobile">
         <mat-icon>flip_camera_ios</mat-icon>
-    </button>
+    </button> -->
 
     <!-- Flash -->
     <button mat-mini-fab color="primary" class="flash" (click)="toggleFlash($event)" *ngIf="mobile">
